# cpp-syntax-revision

./: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp  readme.md
